fix video embed not working on tablet and mobile

--- a/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
+++ b/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
@@ -1016,7 +1016,7 @@ section.quote {
 // See code.org/teach for an example
 .resources-tabs{
   margin-top: 2rem;
-  height: 408px;
+  min-height: 408px;
 
   nav {
     border-bottom: 6px solid $brand_primary_default;
